# SocketCat

./: README.md  pyproject.toml
src/: echo-server.py  socket-cat.py  socket-send.py  socket-write.py  unix-cat.py  unix-send.py  unix-write.py
src/SocketCat/: __init__.py  argparsing.py  common.py  echo
src/SocketCat/cat/: __init__.py
src/SocketCat/echo/: __init__.py
src/SocketCat/echo_server/: __init__.py
src/SocketCat/send/: __init__.py
src/SocketCat/write/: __init__.py
