[project]
name = "SocketCat"
dynamic = ["version"]
description = "Tools for connecting to sockets and `send`ing and `recv`ing with them"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/jb2170/SocketCat/"

[project.scripts]
socket-cat = "SocketCat:main"

[tool.setuptools.dynamic]
version = {attr = "SocketCat.__version__"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
